# uart-packet-protocol

./: .gitignore  CMakeLists.txt  platformio.ini  run_tests.ps1
lib/Protocol/: ChecksumCalculator.h  IUARTBus.h  PacketDecoder.cpp  PacketDecoder.h  PacketEncoder.cpp  PacketEncoder.h  RealUARTBus.h  StateMachine.h
src/: main.cpp
test/test_native/: test_decoder.cpp  test_encoder.cpp
